--- a/src/blocks/header/header.css
+++ b/src/blocks/header/header.css
@@ -5,6 +5,9 @@
     padding-top: 45px;
     padding-bottom: 41px;
     border-bottom: 1px solid #545454;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
 }
 
 @media screen and (max-width: 425px){
