--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,9 @@
 @import url(./vendor/font/_inter/font_inter.css);
 @import url(./blocks/page/page.css);
 @import url(./blocks/header/header.css);
+@import url(./blocks/header/__auth-info/header__auth-info.css);
+@import url(./blocks/header/__email/header__email.css);
+@import url(./blocks/header/__link/header__link.css);
 @import url(./blocks/header/__logo/header__logo.css);
 @import url(./blocks/content/content.css);
 @import url(./blocks/profile/profile.css);
@@ -33,6 +36,7 @@
 @import url(./blocks/popup/__container/_type/_question/popup__container_type_question.css);
 @import url(./blocks/popup/__container/_type/_profile/popup__container_type_profile.css);
 @import url(./blocks/popup/__container/_type/_avatar/popup__container_type_avatar.css);
+@import url(./blocks/popup/__container/_type/_tooltip/popup__container_type_tooltip.css);
 @import url(./blocks/popup/__close-button/popup__close-button.css);
 @import url(./blocks/popup/__image/popup__image.css);
 @import url(./blocks/popup/__name-place/popup__name-place.css);
@@ -48,3 +52,12 @@
 @import url(./blocks/popup/__submit-btn/_inactive/popup__submit-btn_inactive.css);
 @import url(./blocks/popup/__submit-btn/_type/_question/popup__submit-btn_type_question.css);
 @import url(./blocks/popup/__title/_type/_question/popup__title_type_question.css);
+@import url(./blocks/register/register.css);
+@import url(./blocks/register/__button/register__button.css);
+@import url(./blocks/register/__rows/register__rows.css);
+@import url(./blocks/register/__text/register__text.css);
+@import url(./blocks/register/__login-link/register__login-link.css);
+@import url(./blocks/register/__signin/register__signin.css);
+@import url(./blocks/register/__button-signin/register__button-signin.css);
+@import url(./blocks/register/__welcome/register__welcome.css);
+@import url(./blocks/tooltip/__image/tooltip__image.css);
