add auth and work with localStorage

--- a/src/index.css
+++ b/src/index.css
@@ -61,3 +61,4 @@
 @import url(./blocks/register/__button-signin/register__button-signin.css);
 @import url(./blocks/register/__welcome/register__welcome.css);
 @import url(./blocks/tooltip/__image/tooltip__image.css);
+@import url(./blocks/tooltip/__text/tooltip__text.css);
