--- a/src/blocks/header/__link/header__link.css
+++ b/src/blocks/header/__link/header__link.css
@@ -7,6 +7,8 @@
     line-height: 22px;
     text-align: right;
     text-decoration: none;
+    background-color: black;
+    border: none;
 }
 
 .header__link:hover {
