second part fix after first review

--- a/src/blocks/register/__button/register__button.css
+++ b/src/blocks/register/__button/register__button.css
@@ -1,6 +1,6 @@
 .register__button {
     width: 358px;
-    margin: 0 auto;
+    margin: 216px auto 0 auto;
     height: 50px;
     padding: 0;
     border-radius: 2px;
