--- a/src/blocks/register/__welcome/register__welcome.css
+++ b/src/blocks/register/__welcome/register__welcome.css
@@ -1,5 +1,5 @@
 .register__welcome {
-    margin: 60px auto 0 auto;
+    margin: 60px auto 50px auto;
     color: #FFFFFF;
     font-style: normal;
     font-weight: 900;
